# france-healthcare-access

./: .coverage  .env.example  .gitignore  AGENT_PROMPT.md  MAPA_PROJETO.md  Makefile  README.md  ameli.json  discover_output.txt  docker-compose.yml  extract_output.txt  pipeline_output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  rpps.json  rpps_datasets.json  rpps_results.json  streamlit_out.txt  test_coverage.txt  test_out.txt  urls.json
.agent/skills/: SKILL-data.md  SKILL-output.md  SKILL-pipeline.md
.github/workflows/: ci.yml  refresh.yml
app/: streamlit_app.py
data/processed/: communes_enriched.parquet  departements_summary.parquet  quality_report.json
src/: db.py  discover_ids.py  extract.py  mcp_client.py  pipeline.py  test_extract.py  test_sources.py  transform.py  validate.py
tests/: _test_mcp_sse.py  conftest.py  test_mcp_client.py  test_transform.py  test_validate.py
