[project]
name = "france-healthcare-access"
version = "0.1.0"
description = "End-to-end data pipeline mapping GP accessibility across France."
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "folium>=0.16.0",
    "streamlit-folium>=0.21.0",
    "duckdb>=1.0.0",
    "geopandas>=0.14.4",
    "shapely",
    "pyarrow",
    "httpx>=0.27.0"
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.8",
    "black>=24.4.2"
]
